# lwiot-atmega

./: .gitmodules  CMakeLists.txt
atmega/: CMakeLists.txt  avr-i2c.c  avradcchip.cpp  avri2c.h  avri2calgorithm.cpp  avrspi.c  avrspibus.cpp  avruart.cpp  avrwatchdog.cpp  hardwarei2calgorithm.cpp  system_tick.S
atmega/gpio/: avr.c  avrgpiochip.cpp
atmega/i2c/: avr-i2c.c  avri2c.h  avri2calgorithm.cpp  i2c.c
atmega/include/lwiot/avr/: avr.h  avradcchip.h  avrgpiochip.h  avri2calgorithm.h  avrspibus.h  avrsystem.h  avruart.h  avrwatchdog.h  extmem.h  hardwarei2calgorithm.h
atmega/soc/: avr.c  avrsystem.cpp  cplusplus.cpp  critical.c  extmem.c
cmake/: avr.cmake  freertos-type-check.cmake
standalone/: avr.c  lwiot_arch.h
tests/atmega_test/: Makefile  main.cpp  uart.c
tests/i2c-test-nosys/: main.cpp
